elasticsearch/kibana-ingress.yaml
# cat kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: test-ca-cluster-issuer
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
#    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /kibana/$2
  name: kibana
  namespace: elastic
spec:
  rules:
  - host: devops87.ef.com
    http:
      paths:
      - backend:
          service:
            name: elastic-kibana
            port:
              number: 5601
        path: /kibana(/|$)(.*)
        pathType: Prefix
  tls:
  - hosts:
    - devops87.ef.com
#    secretName: elastic-elasticsearch-master-crt
    secretName: myingress-cert
